# LidCavity_CPP

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: ci.yml  verification.yml
docs/: MATLAB_EQUIVALENCE_CHECK.md  METHODOLOGY.md  PHASE2_LOCAL_TESTS.md  PHASE2_VERIFICATION.md  PROJECT_SCOPE.md  RESULTS.md  RUNNING.md  VALIDATION.md
include/lidcavity/: convergence.hpp  field.hpp  operators.hpp  poisson.hpp
postprocess/: plot_cpp_results.py  plot_mesh_validation.py
results/data/: study_summary_full.csv
results/stromboli_2026-07-20/: README.md
results/stromboli_2026-07-20/data/: case_001_N16_Re100_upwind_RBGS_serial_cpp_history.csv  study_summary_smoke.csv
scripts/: build.sh  clean.sh  plot_results.sh  run_canonical_regression.sh  run_full.sh  run_grid.sh  run_medium.sh  run_phase2_verification.sh  run_quick.sh  run_re1000.sh  run_single.sh  run_smoke_test.sh
src/: lid_cavity.cpp
src/verification/: convergence.cpp  operators.cpp  poisson.cpp
tests/: test_convergence.cpp  test_operators.cpp  test_poisson.cpp
